# flaz

./: .gitignore  NOTICE  README.md  pydoc-markdown.yml  pyproject.toml
.flaz-docs/: pyvenv.cfg
artigos/vielas/: fig_4_1_sao_remo.py  fig_4_2_sao_remo_coherence_gaps.py
artigos/vielas/figs/vvv_mds/: paraisopolis_vvv_mds.png.aux.xml
artigos/vielas/scripts/: fig_vvv_over_mds.py  fig_vvv_width.py  table_favelas_geom_lidar.py  table_vvv_paper_ready.py  table_vvv_summary_by_favela.py
artigos/vielas/tables/: .~lock.tabela_2_vvv_paper_ready.csv#  tabela_2_vvv_paper_ready.csv  tabela_favelas_geom_lidar.csv  tabela_vvv_resumo_por_favela.csv
data/: geoportal_subprefeitura_v2.gpkg
data/derived/h3/: h3_r7_buf1200.geojson  h3_r7_buf1200.parquet
docs/: package-lock.json
docs/api/: flaz_models_favela.md  flaz_models_favelas.md  flaz_models_fviz.md
docs/source/: conf.py  index.rst
docs/source/adr/: ADR-0002-parquet-arrow.md  ADR-0003-plugin-system.md  ADR-0004-etlva.md  ADR-0010-chunking-hierarquico.md
src/flaz/: __init__.py  config.py  flaz_io.py
src/flaz/cli/: main.py
src/flaz/compute/: __init__.py  calc_h3_grid.py  geo_color.py  mds.py  token.py
src/flaz/data/: SIRGAS_GPKG_favela.gpkg  articulacao_2024.gpkg  geoportal_subprefeitura_v2.gpkg
src/flaz/io/: __init__.py  flaz_io.py
src/flaz/models/: favela.py  favelas.py  flaz_core.py  fviz.py
src/scripts/: DEPRECATED-debug_viela_axis.py  build_h3_sp.py  build_viela_artifacts_sao_remo.py  gen_vielas_sao_remo.py  test_build_lidar_base.py  test_export_delta_laz.py  test_heightmaps_png.py  test_low_surface_sao_remo.py  test_mdt_png.py  test_viela_axis_sao_remo.py  test_wall_orientation_sao_remo.py
tests/: test_favela.py  test_favelas.py
tools/: generate_docs.py
