[project]
name = "flaz"
version = "0.1.0"
description = "FLAZ — Biblioteca de ETL Espacial 3D+t para o FavelaVIZ"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Fernando Gomes", email = "feromes@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
  # --- núcleo numérico ---
  "numpy>=1.26",
  "pyarrow>=16.0.0",
  "scipy>=1.11",

  # --- geoespacial ---
  "shapely>=2.0.0",
  "pyproj>=3.6",
  "geopandas>=0.14",
  "rasterio>=1.3",

  # --- LiDAR ---
  "laspy[lazrs]>=2.5",

  # --- utilidades ---
  "requests>=2.32",
  "rich>=13.0",
  "typer>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "isort",
  "mypy",
  "ruff",
]

vielas = [
  "scikit-image>=0.21",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
flaz = "flaz.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flaz*"]

[tool.setuptools.package-data]
"flaz.data" = ["*"]
